--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -6,10 +6,13 @@
 }
 
 .card {
-	padding: 1rem;
 	border: 1px solid #efefef;
 	box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.1);
 	border-radius: 0.25rem;
+}
+
+.card-content {
+	padding: 1rem;
 }
 
 [data-pagination-root] {
