--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -35,6 +35,58 @@
 	border-bottom-left-radius: 0.25rem;
 }
 
+[data-switch-root] {
+	display: inline-flex;
+	height: 36px;
+	min-height: 36px;
+	width: 60px;
+	cursor: pointer;
+	align-items: center;
+	border-radius: 9999px;
+	padding: 3px;
+	transition: background-color 0.2s;
+	border: 0.1rem solid palette.$gray-300;
+	background-color: palette.$gray-100;
+
+	&:focus-visible {
+		outline: none;
+	}
+
+	&:disabled {
+		cursor: not-allowed;
+		opacity: 0.5;
+	}
+
+	&[data-state='checked'] {
+		background-color: palette.$gray-400;
+	}
+
+	&[data-state='unchecked'] {
+		background-color: palette.$gray-100;
+		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+	}
+}
+
+[data-switch-thumb] {
+	pointer-events: none;
+	display: block;
+	height: 30px;
+	width: 30px;
+	border-radius: 9999px;
+	background-color: var(--background-color);
+	transition: transform 0.2s;
+	background-color: palette.$gray-500;
+
+	&[data-state='checked'] {
+		transform: translateX(24px);
+	}
+
+	&[data-state='unchecked'] {
+		transform: translateX(0);
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	}
+}
+
 [data-pagination-next-button] {
 	border-top-right-radius: 0.25rem;
 	border-bottom-right-radius: 0.25rem;
@@ -106,6 +158,56 @@
 	padding: 1rem;
 	border-top: 1px solid #444;
 	border-bottom: 1px solid #444;
+}
+
+[data-combobox-root] {
+}
+
+[data-combobox-content] {
+	border-radius: 0.5rem;
+	border: 0.1rem solid #dfe3e8;
+	background-color: #fff;
+	padding: 0.5rem;
+	max-height: 30rem;
+	overflow: auto;
+	box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+[data-combobox-item] {
+	display: flex;
+	border-radius: 0.25rem;
+
+	&:hover {
+		background-color: palette.$gray-300;
+	}
+}
+[data-combobox-label] {
+}
+[data-combobox-input] {
+	display: inline-block;
+
+	padding: 0.5rem 0.75rem;
+	font-size: 0.9rem;
+	border-radius: 0.25rem;
+	cursor: pointer;
+	background-color: palette.$gray-100;
+	border: 0.1rem solid palette.$gray-300;
+	text-decoration: none;
+}
+
+.input {
+	padding: 0.5rem 0.75rem;
+	font-size: 0.9rem;
+	border-radius: 0.25rem;
+	cursor: pointer;
+	background-color: palette.$gray-100;
+	border: 0.1rem solid palette.$gray-300;
+	text-decoration: none;
+}
+
+[data-combobox-hidden-input] {
+}
+[data-combobox-arrow] {
 }
 
 [data-pagination-prev-button],
