--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -1,4 +1,12 @@
 @use 'palette.scss' as palette;
+
+@use './components/combobox.scss';
+@use './components/pagination.scss';
+@use './components/pin-input.scss';
+@use './components/select.scss';
+@use './components/switch.scss';
+@use './components/tooltip.scss';
+
 * {
 	font-family: 'Inter Variable', Arial, Helvetica, sans-serif;
 	margin: 0;
@@ -16,185 +24,6 @@
 	padding: 1rem;
 }
 
-[data-pagination-root] {
-	display: inline-flex;
-	align-items: stretch;
-	border: 0px solid #444;
-	position: relative;
-}
-
-[data-pagination-per-page-button] {
-	border: none;
-	background-color: #222;
-	color: #ffffff;
-	border: 1px solid #444;
-	padding: 0.5rem;
-	height: 2rem;
-
-	border-top-left-radius: 0.25rem;
-	border-bottom-left-radius: 0.25rem;
-}
-
-[data-switch-root] {
-	display: inline-flex;
-	height: 36px;
-	min-height: 36px;
-	width: 60px;
-	cursor: pointer;
-	align-items: center;
-	border-radius: 9999px;
-	padding: 3px;
-	transition: background-color 0.2s;
-	border: 0.1rem solid palette.$gray-300;
-	background-color: palette.$gray-100;
-
-	&:focus-visible {
-		outline: none;
-	}
-
-	&:disabled {
-		cursor: not-allowed;
-		opacity: 0.5;
-	}
-
-	&[data-state='checked'] {
-		background-color: palette.$gray-400;
-	}
-
-	&[data-state='unchecked'] {
-		background-color: palette.$gray-100;
-		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-	}
-}
-
-[data-switch-thumb] {
-	pointer-events: none;
-	display: block;
-	height: 30px;
-	width: 30px;
-	border-radius: 9999px;
-	background-color: var(--background-color);
-	transition: transform 0.2s;
-	background-color: palette.$gray-500;
-
-	&[data-state='checked'] {
-		transform: translateX(24px);
-	}
-
-	&[data-state='unchecked'] {
-		transform: translateX(0);
-		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	}
-}
-
-[data-pagination-next-button] {
-	border-top-right-radius: 0.25rem;
-	border-bottom-right-radius: 0.25rem;
-}
-
-[data-pagination-prev-button],
-[data-pagination-next-button],
-[data-pagination-page] {
-	border: none;
-	border: 1px solid #444;
-	border-left: none;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #222;
-	color: #ffffff;
-	padding: 0.75rem;
-	height: 2rem;
-	cursor: pointer;
-
-	&[data-selected] {
-		background-color: #444;
-	}
-
-	&:disabled {
-		cursor: not-allowed;
-	}
-}
-
-[data-tooltip-content] {
-	background-color: #fff;
-	border: 1px solid #eee;
-	border-radius: 0.25rem;
-	padding: 0.5rem;
-}
-
-[data-tooltip-trigger] {
-	border: none;
-	background-color: transparent;
-}
-
-[data-select-content] {
-	background-color: #222;
-	border: 1px solid #444;
-	border-radius: 0.25rem;
-	// padding: 0.5rem;
-	max-height: 25rem;
-	overflow-y: auto;
-	// width: 15rem !important;
-}
-
-[data-select-item] {
-	cursor: pointer;
-
-	&[data-disabled] {
-		cursor: not-allowed;
-	}
-
-	&[data-highlighted] {
-		outline: 1px solid white;
-	}
-
-	&[data-selected] {
-		background-color: #333;
-	}
-}
-
-[data-select-label] {
-	padding: 1rem;
-	border-top: 1px solid #444;
-	border-bottom: 1px solid #444;
-}
-
-[data-combobox-root] {
-}
-
-[data-combobox-content] {
-	border-radius: 0.5rem;
-	border: 0.1rem solid #dfe3e8;
-	background-color: #fff;
-	padding: 0.5rem;
-	max-height: 30rem;
-	overflow: auto;
-	box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.1);
-}
-
-[data-combobox-item] {
-	display: flex;
-	border-radius: 0.25rem;
-
-	&:hover {
-		background-color: palette.$gray-300;
-	}
-}
-[data-combobox-label] {
-}
-[data-combobox-input] {
-	display: inline-block;
-
-	padding: 0.5rem 0.75rem;
-	font-size: 0.9rem;
-	border-radius: 0.25rem;
-	cursor: pointer;
-	background-color: palette.$gray-100;
-	border: 0.1rem solid palette.$gray-300;
-	text-decoration: none;
-}
-
 .input {
 	padding: 0.5rem 0.75rem;
 	font-size: 0.9rem;
@@ -203,56 +32,6 @@
 	background-color: palette.$gray-100;
 	border: 0.1rem solid palette.$gray-300;
 	text-decoration: none;
-}
-
-[data-combobox-hidden-input] {
-}
-[data-combobox-arrow] {
-}
-
-[data-pagination-prev-button],
-[data-pagination-next-button],
-[data-pagination-page] {
-	border: none;
-	border: 1px solid #444;
-	border-left: none;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #222;
-	color: #ffffff;
-	padding: 0.75rem;
-	height: 2rem;
-	cursor: pointer;
-
-	&[data-selected] {
-		background-color: #444;
-	}
-
-	&:disabled {
-		cursor: not-allowed;
-	}
-}
-
-[data-pin-input-root] {
-	display: flex;
-	gap: 1rem;
-	align-items: center;
-}
-
-[data-pin-input-input] {
-	border: 1px solid #444;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #222;
-	color: #ffffff;
-	padding: 0.75rem;
-	cursor: pointer;
-	width: 3.5rem;
-	height: 3.5rem;
-	border-radius: 0.25rem;
-	text-align: center;
 }
 
 .button {
