--- a/webapp/src/lib/styles/components/tooltip.scss
+++ b/webapp/src/lib/styles/components/tooltip.scss
@@ -5,6 +5,9 @@
 	border: 1px solid #eee;
 	border-radius: 0.25rem;
 	padding: 0.5rem;
+	max-width: 20rem;
+	font-size: 0.9rem;
+	box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 [data-tooltip-trigger] {
