feat: action editing and revised configuring and creating, dialog styling

--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -6,6 +6,7 @@
 @use './components/select.scss';
 @use './components/switch.scss';
 @use './components/tooltip.scss';
+@use './components/dialog.scss';
 
 * {
 	font-family: 'Inter Variable', Arial, Helvetica, sans-serif;
