--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -68,4 +68,8 @@
 		background-color: palette.$gray-200;
 		color: palette.$gray-900;
 	}
+
+	&:disabled {
+		background-color: palette.$gray-900;
+	}
 }
