--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -7,6 +7,7 @@
 @use './components/switch.scss';
 @use './components/tooltip.scss';
 @use './components/dialog.scss';
+@use './components/popover.scss';
 
 * {
 	font-family: 'Inter Variable', Arial, Helvetica, sans-serif;
