--- a/webapp/src/lib/styles/components/select.scss
+++ b/webapp/src/lib/styles/components/select.scss
@@ -1,4 +1,4 @@
-@use '$lib/styles/palette.scss' as palette;
+@use '$styles/palette.scss' as palette;
 
 [data-select-content] {
 	background-color: #222;
