--- a/webapp/src/lib/styles/components/switch.scss
+++ b/webapp/src/lib/styles/components/switch.scss
@@ -1,4 +1,4 @@
-@use '$lib/styles/palette.scss' as palette;
+@use '$styles/palette.scss' as palette;
 
 [data-switch-root] {
 	display: inline-flex;
