--- a/webapp/src/lib/styles/components/tooltip.scss
+++ b/webapp/src/lib/styles/components/tooltip.scss
@@ -1,4 +1,4 @@
-@use '$lib/styles/palette.scss' as palette;
+@use '$styles/palette.scss' as palette;
 
 [data-tooltip-content] {
 	background-color: #fff;
