--- a/webapp/src/lib/styles/global.scss
+++ b/webapp/src/lib/styles/global.scss
@@ -1,4 +1,4 @@
-@use 'palette.scss' as palette;
+@use '$styles/palette.scss' as palette;
 
 @use './components/combobox.scss';
 @use './components/pagination.scss';
